objects/FieloEE__Menu__c.object
<CustomObject>
    <description>The members’ portal&apos;s pages. It is equivalent to the site map.</description>
    <fields>
        <fullName>CountryCode__c</fullName>
        <formula>F_PRM_Country__r.CountryCode__c</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_AvailableGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for guest users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>FieloEE__Category__c</referenceTo>
        <relationshipLabel>Menu</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Challenge that this menu represents, either if it&apos;s an Overview or Program page.</description>
        <inlineHelpText>Challenge that this menu represents, either if it&apos;s an Overview or Program page.</inlineHelpText>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Menu</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>Menu</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_MenuFilter__c</fullName>
        <externalId>true</externalId>
        <label>Menu Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_MultiLanguageCustomLabel__c</fullName>
        <label>Multi Language Custom Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_Scope__c</fullName>
        <inlineHelpText>Used to define the limits of this menu: Global or Local</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                    <default>true</default>
                    <label>Local</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_PRM_SegmentationRefreshPopup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Configuration:
 - TRUE: enable segmentation refresh popup in front-end.
 - FLASE: disable segmentation refresh popup in front-end.</inlineHelpText>
        <label>Segmentation Refresh Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_ShowSupportStickyBar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Support Sticky Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_Status__c</fullName>
        <inlineHelpText>Live: productive pages displayed in the front end
Draft: internal pages under construction</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>F_PRM_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_PRM_TitleCustomLabel__c</fullName>
        <label>Title Custom Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_Type__c</fullName>
        <description>Defines if this menu is a template or a real menu page</description>
        <inlineHelpText>Defines if this menu is a template or a real menu page</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Page</fullName>
                    <default>true</default>
                    <label>Page</label>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_PreviewLanguages__c</fullName>
        <formula>&apos;en_US&apos; 
+ IF( !ISBLANK(TEXT(F_PRM_Country__r.SupportedLanguage1__c) ), &apos;;&apos; +  TEXT(F_PRM_Country__r.SupportedLanguage1__c) , &apos;&apos; )
+ IF( !ISBLANK(TEXT(F_PRM_Country__r.SupportedLanguage2__c) ), &apos;;&apos; +  TEXT(F_PRM_Country__r.SupportedLanguage2__c) , &apos;&apos; ) 
+ IF( !ISBLANK(TEXT(F_PRM_Country__r.SupportedLanguage3__c) ), &apos;;&apos; +  TEXT(F_PRM_Country__r.SupportedLanguage3__c) , &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview Languages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PreviewMemberFilter__c</fullName>
        <formula>&quot; F_PRM_Country__c = &apos;&quot; +  F_PRM_Country__c + &quot;&apos;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview Member Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <label>Attachment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CSSClasses__c</fullName>
        <label>CSSClasses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__CSS__c</fullName>
        <description>CSS code to modify the look and formatting of this menu.</description>
        <label>CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__CustomURL__c</fullName>
        <description>An external or internal link to a customized page.</description>
        <inlineHelpText>The link type to define the custom url, an internal or external link. The link must contain http://www.domain.com</inlineHelpText>
        <label>Custom URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <description>A description of this menu, for your use only.</description>
        <inlineHelpText>An explanation about the menu</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Desktop__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make this menu show in a desktop computer.</description>
        <inlineHelpText>Check this option if this component is visible on a desktop computer</inlineHelpText>
        <label>Desktop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExternalName__c</fullName>
        <label>External Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__HasMultiSegments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Multi Segments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Home__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will make this the home page of the members&apos; portal.</description>
        <inlineHelpText>Select this option if this is the Home Page</inlineHelpText>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__ImagePosition__c</fullName>
        <label>Image Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Only Image</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
                <value>
                    <fullName>Only Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+FieloEE__AttachmentId__c, &quot;photo&quot;,50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Define if the menu is a template</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Layout__c</fullName>
        <description>This field will be populated by the trigger and it will contain the CSS classes depending on the visibility of the Menu by device.</description>
        <label>Display Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Column</fullName>
                    <default>true</default>
                    <label>One Column</label>
                </value>
                <value>
                    <fullName>Two Columns</fullName>
                </value>
                <value>
                    <fullName>Banner + Two Columns</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Link__c</fullName>
        <description>Field to indicate if the menu has components</description>
        <label>Has components</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the father menu</description>
        <label>Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Sub Menus</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Mobile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make this menu show in a cell phone.</description>
        <inlineHelpText>Check this option if this component is visible on a mobile device</inlineHelpText>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <description>The order in which this menu will show in the members&apos; portal.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Placement__c</fullName>
        <description>The placement of this menu. It can be Top, Main or Footer.</description>
        <label>Placement</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>F_PRM_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                    <default>true</default>
                    <label>Main</label>
                </value>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Footer</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Editorial Pages RU</fullName>
                </value>
                <value>
                    <fullName>Editorial Pages FR</fullName>
                </value>
                <value>
                    <fullName>Editorial Pages BR</fullName>
                </value>
                <value>
                    <fullName>Editorial Pages</fullName>
                </value>
                <value>
                    <fullName>Editorial Pages US</fullName>
                </value>
                <value>
                    <fullName>Editorial Pages CA</fullName>
                </value>
                <value>
                    <fullName>Editorial Pages IT</fullName>
                </value>
                <value>
                    <fullName>Editorial Pages UK</fullName>
                </value>
                <value>
                    <fullName>Rewards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this menu belongs.</description>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Menu</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used to determine if a Menu has segments. When this lookup is null, it doesn&apos;t have any Segment Domain.</description>
        <label>Segment</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipLabel>Menu</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__SEODescription__c</fullName>
        <label>SEO Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__SEOKeywords__c</fullName>
        <label>SEO Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__SEOTitle__c</fullName>
        <label>SEO Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Tablet__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make this menu show in a tablet computer.</description>
        <inlineHelpText>Check this option if this component is visible on a tablet device</inlineHelpText>
        <label>Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Title__c</fullName>
        <description>A title that will show on top of the page.</description>
        <inlineHelpText>If you set a title it will appear at the top of the menu page</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__visibility__c</fullName>
        <description>Who will be able to see this menu: nobody, everybody or only logged in users.</description>
        <inlineHelpText>Define who will see the menu.</inlineHelpText>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                    <default>true</default>
                    <label>Hidden</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_BG__c</fullName>
        <label>Name - BG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_CS__c</fullName>
        <label>Name - CS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_DA__c</fullName>
        <label>Name - DA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_DE__c</fullName>
        <label>Name - DE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_EL__c</fullName>
        <label>Name - EL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_EN__c</fullName>
        <label>Name - EN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_ES__c</fullName>
        <label>Name - ES</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_FI__c</fullName>
        <label>Name - FI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_FR__c</fullName>
        <label>Name - FR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_HR__c</fullName>
        <label>Name - HR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_HU__c</fullName>
        <label>Name - HU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_IN__c</fullName>
        <label>Name - IN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_IT__c</fullName>
        <label>Name - IT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_JA__c</fullName>
        <label>Name - JA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_KO__c</fullName>
        <label>Name - KO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_NL__c</fullName>
        <label>Name - NL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_NO__c</fullName>
        <label>Name - NO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_PL__c</fullName>
        <label>Name - PL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_PT__c</fullName>
        <label>Name - PT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_RO__c</fullName>
        <label>Name - RO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_RU__c</fullName>
        <label>Name - RU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_SH__c</fullName>
        <label>Name - SH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_SK__c</fullName>
        <label>Name - SK</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_SV__c</fullName>
        <label>Name - SV</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_TH__c</fullName>
        <label>Name - TH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_TR__c</fullName>
        <label>Name - TR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_VI__c</fullName>
        <label>Name - VI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_ZH__c</fullName>
        <label>Name - ZH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingDescription__c</fullName>
        <description>Small description of last publication</description>
        <inlineHelpText>Small description of last publication</inlineHelpText>
        <label>PublishingDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublishingGoldenId__c</fullName>
        <description>Track the source Id</description>
        <inlineHelpText>Track the source Id</inlineHelpText>
        <label>PublishingGoldenId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingIsUpdated__c</fullName>
        <description>Identify if the record has been updated</description>
        <formula>IF( OR(LastModifiedDate  &gt; PublishingTimestamp__c,ISBLANK(PublishingTimestamp__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify if the record has been updated</inlineHelpText>
        <label>PublishingIsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingOdasevaId__c</fullName>
        <externalId>true</externalId>
        <label>PublishingOdasevaId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPublisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track who was the last publisher</description>
        <inlineHelpText>Track who was the last publisher</inlineHelpText>
        <label>PublishingPublisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PublisherFieloEEMenuc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingStatusImage__c</fullName>
        <description>Identify at first sight that the record is set for publication</description>
        <formula>CASE(TEXT(PublishingStatus__c),&quot;Ready for Publication&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Ready for Publication&quot;),&quot;Awaiting Publication&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Awaiting Publication&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify at first sight that the record is set for publication</inlineHelpText>
        <label>PublishingStatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingStatus__c</fullName>
        <label>PublishingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Publication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishingTimestamp__c</fullName>
        <description>Date and time of the last publication</description>
        <inlineHelpText>Date and time of the last publication</inlineHelpText>
        <label>PublishingTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_BG__c</fullName>
        <label>Title - BG</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_CS__c</fullName>
        <label>Title - CS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_DA__c</fullName>
        <label>Title - DA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_DE__c</fullName>
        <label>Title - DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_EL__c</fullName>
        <label>Title - EL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_EN__c</fullName>
        <label>Title - EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_ES__c</fullName>
        <label>Title - ES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_FI__c</fullName>
        <label>Title - FI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_FR__c</fullName>
        <label>Title - FR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_HR__c</fullName>
        <label>Title - HR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_HU__c</fullName>
        <label>Title - HU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_IN__c</fullName>
        <label>Title - IN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_IT__c</fullName>
        <label>Title - IT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_JA__c</fullName>
        <label>Title - JA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_KO__c</fullName>
        <label>Title - KO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_NL__c</fullName>
        <label>Title - NL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_NO__c</fullName>
        <label>Title - NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_PL__c</fullName>
        <label>Title - PL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_PT__c</fullName>
        <label>Title - PT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_RO__c</fullName>
        <label>Title - RO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_RU__c</fullName>
        <label>Title - RU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_SH__c</fullName>
        <label>Title - SH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_SK__c</fullName>
        <label>Title - SK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_SV__c</fullName>
        <label>Title - SV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_TH__c</fullName>
        <label>Title - TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_TR__c</fullName>
        <label>Title - TR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_VI__c</fullName>
        <label>Title - VI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_ZH__c</fullName>
        <label>Title - ZH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Menu</label>
    <listViews>
        <fullName>AR_Menu</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__ExternalName__c</columns>
        <columns>F_PRM_MenuFilter__c</columns>
        <columns>F_PRM_Category__c</columns>
        <columns>FieloEE__RedemptionRule__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>P-AR</value>
        </filters>
        <filters>
            <field>F_PRM_Country__c</field>
            <operation>equals</operation>
            <value>Argentina</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Reward</value>
        </filters>
        <label>AR - Rewards Menus</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AU_Menus</fullName>
        <columns>NAME</columns>
        <columns>F_PRM_MenuFilter__c</columns>
        <columns>Title_ZH__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>FieloEE__Menu__c</columns>
        <columns>F_PRM_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_PRM_MenuFilter__c</field>
            <operation>startsWith</operation>
            <value>P-AU</value>
        </filters>
        <label>AU Menus</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_PRM_Pages_list</fullName>
        <columns>RECORDTYPE</columns>
        <columns>FieloEE__Menu__c</columns>
        <columns>NAME</columns>
        <columns>FieloEE__ExternalName__c</columns>
        <columns>F_PRM_Status__c</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active PRM Pages list</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_PRM_Pages_list1</fullName>
        <columns>RECORDTYPE</columns>
        <columns>FieloEE__Menu__c</columns>
        <columns>FieloEE__Placement__c</columns>
        <columns>NAME</columns>
        <columns>FieloEE__ExternalName__c</columns>
        <columns>CountryCode__c</columns>
        <columns>F_PRM_Status__c</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active PRM Pages list</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <booleanFilter>(1 or 2 or 3) AND 4</booleanFilter>
        <columns>F_PRM_Country__c</columns>
        <columns>F_PRM_Status__c</columns>
        <columns>NAME</columns>
        <columns>FieloEE__ExternalName__c</columns>
        <columns>FieloEE__Menu__c</columns>
        <columns>F_PRM_Challenge__c</columns>
        <columns>FieloEE__RedemptionRule__c</columns>
        <columns>F_PRM_Category__c</columns>
        <columns>F_PRM_MenuFilter__c</columns>
        <columns>FieloEE__Description__c</columns>
        <columns>F_PRM_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>OKKEN,BLOKSET,-LV-,-MV-</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>NEX,SM6,MCSET,MOTORPACT,BIOSCO,RM6,PREMSET,PIX</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>license,panel,-PB-,_PB_</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>P-WW</value>
        </filters>
        <label>LV&amp;MV Menus (P-WW Only)</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRM_LV_MV</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All3</fullName>
        <columns>NAME</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>FieloEE__Menu__c</columns>
        <columns>F_PRM_Challenge__c</columns>
        <columns>F_PRM_MenuFilter__c</columns>
        <columns>FieloEE__Title__c</columns>
        <columns>FieloEE__Program__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>FieloEE__visibility__c</columns>
        <columns>F_PRM_Category__c</columns>
        <columns>F_PRM_MultiLanguageCustomLabel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Products</value>
        </filters>
        <label>Product pages all countries (Paco)</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRM_LV_MV</group>
        </sharedTo>
    </listViews>
</CustomObject>